# assorted-tools

.github/workflows/: bids-like-ci.yml  bids_like-ci.yml  mne-xdf-ci.yml  mne_xdf-ci.yml
bids-like/: README.md  __init__.py  pyproject.toml
bids_like/: pyproject.toml
lsl-recorder/: .gitmodules  Cargo.toml  example.xdf  pyproject.toml  readme.md
lsl-recorder/examples/: record.rs
lsl-recorder/lsl_recorder/: __init__.py
lsl-recorder/src/: lib.rs
mne-xdf/: README.md  __init__.py  pyproject.toml
mne_xdf/: README.md  pyproject.toml
webcam-py/: .gitignore  Cargo.toml  demo.py  pyproject.toml
webcam-py/examples/: record.rs
webcam-py/src/: lib.rs
webcam-py/src/rtsp/: mod.rs  rtsp_msg_handler.rs  rtsp_session.rs
