[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mne-xdf"
version = "0.3.0"
description = "A Python library for importing XDF files for use with MNE-Python."
authors = [{name = "M Pabst", email = "your.email@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "mne>=1.0.0",
    "numpy>=2.2.3,<3",
    "pyxdf>=1.17.0,<2",
    "scipy>=1.15.2,<2"
]

[tool.setuptools.packages.find]
where = ["."]  # or specify your source directory
